[project]
name = "color_transfer"
version = "1.0.0"
description = "ColorTransfer provides a suite of tools for color migration tasks."
readme = "README.md"
authors = [
    { name = "XIAODUOLU", email = "lxd0705@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "numpy==1.26",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
color_transfer = "color_transfer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
